<resources>
    <string name="app_name">Vera SHOP</string>
    <string name="sprafka">Справка</string>
    <string name="no">Заполните все поля!</string>
    <string name="yes">Ответ поступит в течение 5 часов!</string>
    <string name="oprogramme">О программе</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specifications">"""Характеристики"""</string>
    <string name="grob_baton">"""
Размер (м)	1-2,2
Цвет - синий
Материал	Шелк, атлас, бархат
Тип	- Однокрышечный
Ширина в изголовье (см) - 60
Ширина в ногах (см) - 36
Высота борта (см) - 22
Высота крышки (см) - 17
Максимальная нагрузка (кг) - 120
Вес готового изделия (кг) - 35
"""</string>
    <string name="grob_babo4ka">"""
Размер (м)	1-2,2
Цвет - синий
Материал	Шелк, атлас, бархат
Тип -	Однокрышечный
Ширина в изголовье (см) - 60
Ширина в ногах (см) - 36
Высота борта (см) - 22
Высота крышки (см) - 17
Максимальная нагрузка (кг) - 120
Вес готового изделия (кг) - 35
"""</string>
    <string name="grob_komb">"""
Размер (м) - 1,8-2,0
Цвет - синий
Лак - Глянец
Тип - Однокрышечный
Ширина в изголовье (см) - 53,5
Ширина в ногах (см) - 42,5
Максимальная нагрузка (кг) - 120
Вес готового изделия (кг) - 45
"""</string>
    <string name="grob_vegas">"""
Размер (м) - 1,8-2,0
Цвет - белый
Лак - Глянец
Тип - Двухкрышечный
Ширина в изголовье (см) - 57
Ширина в ногах (см) - 57
Максимальная нагрузка (кг) - 120
Вес готового изделия (кг) - 48
"""</string>
    <string name="grob_napaleon">"""
Размер (м)	1-2,2
Цвет - красный
Материал	Шелк, атлас, бархат
Тип	- Однокрышечный
Ширина в изголовье (см) - 60
Ширина в ногах (см) - 36
Высота борта (см) - 22
Высота крышки (см) - 17
Максимальная нагрузка (кг) - 120
Вес готового изделия (кг) - 35
"""</string>
    <string name="grob_volan">"""
Размер (м)	1-2,2
Цвет - синий
Материал - атлас
Тип	- Однокрышечный
Ширина в изголовье (см) - 60
Ширина в ногах (см) - 36
Высота борта (см) - 22
Высота крышки (см) - 17
Максимальная нагрузка (кг) - 120
Вес готового изделия (кг) - 35
"""</string>


    //ВЕНКИ


    <string name="venok_jbjd">"""
Высота без ног - 110 см
Высота с ногами - 135 см
"""</string>
    <string name="venok_s4ast">"""
Высота без ног - 90 см
Высота с ногами - 100 см
"""</string>
    <string name="venok_pamyat">"""
Высота без ног - 90 см
Высота с ногами - 100 см
"""</string>
    <string name="venok_kalla">"""
Высота без ног - 90 см
Высота с ногами - 100 см
"""</string>
    <string name="venok_roz">"""
Высота без ног - 90 см
Высота с ногами - 100 см
"""</string>

    //КРЕСТЫ

    <string name="krest_pamyat">"""
Материал - Массив сосна
Высота(см) - 210
Ширина (см) - 8,5
Толщина (см) - 4

Перекладина
Длина (см) - 31
Ширина (см)	- 8,5
Толщина (см) - 4

2 перекладина
Длина (см) - 60
Ширина (см) - 8,5
Толщина (см) - 4

3 перекладина
Длина (см) - 40
Ширина (см) - 8,5
Толщина (см) - 4
"""</string>
    <string name="krest_standart">"""
Материал - Массив сосна
Высота(см) - 210
Ширина (см) - 8,5
Толщина (см) - 4

Перекладина
Длина (см) - 31
Ширина (см)	- 8,5
Толщина (см) - 4

2 перекладина
Длина (см) - 60
Ширина (см) - 8,5
Толщина (см) - 4

3 перекладина
Длина (см) - 40
Ширина (см) - 8,5
Толщина (см) - 4
"""</string>
    <string name="krest_savitushka">"""
Материал - Стальной профиль окрашенный
Высота(см) - 200
Ширина (см) - 3
Толщина (см) - 2

2 перекладина
Длина (см) - 81
Ширина (см) - 3
Толщина (см) - 3

Табличка
Длина (см) - 30
Ширина (см) - 20

3 перекладина
Длина (см) - 50,5
Ширина (см) - 3
Толщина (см) - 2
"""</string>
    <string name="krest_iisus">"""
Материал - Массив сосна
Высота(см) - 210
Ширина (см) - 8,5
Толщина (см) - 4

Перекладина
Длина (см) - 31
Ширина (см)	- 8,5
Толщина (см) - 4

2 перекладина
Длина (см) - 60
Ширина (см) - 8,5
Толщина (см) - 4

3 перекладина
Длина (см) - 40
Ширина (см) - 8,5
Толщина (см) - 4
"""</string>
    <string name="krest_zolotoy">"""
Материал - Массив сосна
Высота(см) - 220
Ширина (см) - 12
Толщина (см) - 5

Перекладина
Длина (см) - 35,5
Ширина (см)	- 12
Толщина (см) - 5

2 перекладина
Длина (см) - 100
Ширина (см) - 12
Толщина (см) - 5

3 перекладина
Длина (см) - 38,5
Ширина (см) - 12
Толщина (см) - 5
"""</string>
    <string name="urns_wishnya">"""
Внутренние размеры
Ширина (см) - 17,5
Высота (см) - 23

Внешние размеры
Ширина (см) - 16
Высота (см) - 20
"""</string>
    <string name="urns_malahit">"""
Внутренние размеры
Ширина (см) - 17,5
Высота (см) - 23

Внешние размеры
Ширина (см) - 16
Высота (см) - 20
"""</string>
    <string name="urns_mramor">"""
Внутренние размеры
Ширина (см) - 17,5
Высота (см) - 23

Внешние размеры
Ширина (см) - 16
Высота (см) - 20
"""</string>
    <string name="urns_granit">"""
Внутренние размеры
Ширина (см) - 17,5
Высота (см) - 23

Внешние размеры
Ширина (см) - 16
Высота (см) - 20
"""</string>
    <string name="urns_koza">"""
Внутренние размеры
Ширина (см) - 17,5
Высота (см) - 23

Внешние размеры
Ширина (см) - 16
Высота (см) - 20
"""</string>


</resources>